[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "l2tdevtools"
version = "20251127"
description = "Development tools for the log2timeline projects"
maintainers = [
    { name = "Log2Timeline maintainers", email = "log2timeline-maintainers@googlegroups.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/log2timeline/l2tdevtools"
Repository = "https://github.com/log2timeline/l2tdevtools"

[tool.setuptools.packages.find]
where = ["."]
include = ["l2tdevtools"]
exclude = ["docs", "tests", "tests.*", "utils"]
