[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "l2tdevtools"
version = "20260704"
description = "Development tools for the log2timeline projects"
maintainers = [
    { name = "Log2Timeline maintainers", email = "log2timeline-maintainers@googlegroups.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/log2timeline/l2tdevtools"
Repository = "https://github.com/log2timeline/l2tdevtools"

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"
force-exclude = """
(
    data/
  | test_data/linter_fail.py
)
"""

[tool.docformatter]
black = true
non-cap = ["str:"]
non-strict = true

[tool.l2tdevtools]
name = "log2timeline development tools"
status = "alpha"
description = """
Development tools for the log2timeline projects. \
"""

[tool.setuptools]
package-dir = {"l2tdevtools" = "l2tdevtools"}
