[metadata]
name = l2tdevtools
version = 20230506
description = Development tools for the log2timeline projects
long_description = Development tools for the log2timeline projects.
long_description_content_type = text/plain
url = https://github.com/log2timeline/l2tdevtools
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  l2tdevtools = l2tdevtools
packages = find:
python_requires = >=3.7

[options.package_data]
l2tdevtools =
  data/*.ini
  data/dpkg_templates/*
  data/licenses/*
  data/rpm_templates/*
  data/templates/.pylintrc
  data/templates/*.sh
  data/templates/appveyor.yml/*
  data/templates/setup.cfg/*
  data/templates/setup.py/*
  data/templates/tox.ini/*

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_rpm]
release = 1
packager = Log2Timeline maintainers <log2timeline-maintainers@googlegroups.com>
doc_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
build_requires = python3-setuptools

[bdist_wheel]
universal = 1
