[metadata]
name = l2tdevtools
version = 20241008
description = Development tools for the log2timeline projects
long_description = Development tools for the log2timeline projects.
long_description_content_type = text/plain
url = https://github.com/log2timeline/l2tdevtools
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  l2tdevtools = l2tdevtools
packages = find:
python_requires = >=3.8
scripts =
  tools/build.py
  tools/develop.py
  tools/dpkg-generate.py
  tools/manage.py
  tools/review.py
  tools/schema_extractor.py
  tools/stats.py
  tools/update-dependencies.py
  tools/update.py

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .
